[package]
name = "shared-expiry-get"
version = "0.0.1"
authors = ["Florian Merz <flomerz@gmail.com>"]
description = "Simple concurrent async get with expiration for Rust"
edition = "2018"
license = "MIT"
repository = "https://github.com/fiji-flo/shared-expiry-get"
documentation = "https://docs.rs/crate/shared-expiry-get"
keywords = ["cache", "async", "concurrent"]
categories = []
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
log = "0.4"

[dev-dependencies]
chrono = "0.4"
futures-timer = "0.1"
reqwest = "0.9"
headers = "0.2"
tokio = "0.1.19"
serde_json = "1.0.32"
