[package]
name = "shared-expiry-get"
version = "0.1.0"
authors = ["Florian Merz <flomerz@gmail.com>"]
description = "Simple concurrent async get with expiration for Rust"
edition = "2018"
license = "MIT"
repository = "https://github.com/fiji-flo/shared-expiry-get"
documentation = "https://docs.rs/crate/shared-expiry-get"
keywords = ["cache", "async", "concurrent"]
categories = []
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
log = "0.4"

[dev-dependencies]
chrono = "0.4"
futures-timer = "2.0"
reqwest =  { version = "0.10", features = ["json"] }
headers = "0.3"
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0.32"
env_logger = "0.7"
